Build: Remove default font from package, as it is provided by Google
Doc: Update theme to dark
Doc: Atom/Icon listing all icons and name variations

Feat: Atom/DatePickerInput add box shadow to the popper
Feat: Atom/SelectInput add box shadow to the popper
Feat: Atom/MultiSelectInput add box shadow to the popper
Feat: Atom/DynamicSearchCreatableInput add box shadow to the popper
Feat: Atom/DynamicSearchInput add box shadow to the popper

--- a/src/Components/Organisms/NavBar/NavBar.stories.mdx
+++ b/src/Components/Organisms/NavBar/NavBar.stories.mdx
@@ -1,5 +1,4 @@
 import { Canvas, Meta, ArgsTable, Story, Source } from '@storybook/addon-docs';
-import { MemoryRouter as Router } from 'react-router-dom';
 
 import NavBar from './NavBar';
 import NavItem from './NavItem';
@@ -10,166 +9,7 @@ import styles from './NavBar.module.scss';
 
 export const Template = (args) => {
   return (
-    <Router>
-      <NavBar {...args} className={styles.positionRelative}>
-        <NavBarMenu>
-          <NavItem
-            label='Label 1'
-            subItems={[
-              {
-                label: 'Label 1',
-                onClick: () => {
-                  console.log('label 1 - label 1');
-                },
-              },
-              {
-                label: 'Label 2',
-                onClick: () => {
-                  console.log('label 1 - label 2');
-                },
-              },
-            ]}
-          />
-          <NavItem
-            label='Label 2'
-            subItems={[
-              {
-                label: 'Label 1',
-                onClick: () => {
-                  console.log('label 2 - label 1');
-                },
-              },
-              {
-                label: 'Label 2',
-                onClick: () => {
-                  console.log('label 2 - label 2');
-                },
-              },
-            ]}
-          />
-          <NavItem
-            label='Label 3'
-            onClick={() => {
-              console.log('label 3');
-            }}
-          />
-        </NavBarMenu>
-        <NavBarUtilities>
-          <NavItem
-            icon={['fal', 'ballot-check']}
-            counter={2}
-            subItems={[
-              {
-                label: 'Label 1',
-              },
-              {
-                label: 'Label 2',
-              },
-            ]}
-          />
-          <NavItem
-            icon={['fal', 'bell']}
-            counter='+99'
-            customSubItem={
-              <div
-                style={{
-                  maxWidth: '500px',
-                  height: '300px',
-                  padding: '0px 16px',
-                  overflowX: 'hidden',
-                  overflowY: 'auto',
-                  backgroundColor: '#FFF',
-                }}>
-                <p>
-                  Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
-                  rerum nihil obcaecati labore. Id praesentium porro ea placeat rerum aut tempore totam aut illum
-                  cupiditate sed laborum explicabo. Hic explicabo voluptatibus qui repellat fugiat ex voluptatum fuga
-                  qui architecto atque quo illum quas aut facilis nesciunt? Ut suscipit rerum ut perferendis nihil ea
-                  autem unde est enim veniam nam odio tempora.
-                </p>
-                <p>
-                  Quo numquam iste est repellendus numquam et galisum omnis ad praesentium dolores aut neque saepe vel
-                  consectetur enim aut cumque neque. Et voluptate sapiente quisquam quasi eum beatae voluptas rem iure
-                  velit. Sed impedit eaque 33 natus nihil est quaerat porro est quia nisi qui doloribus aperiam. Sit
-                  culpa illum ea consectetur perspiciatis ex veritatis dolorem id velit sequi qui maiores asperiores!
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
-                  rerum nihil obcaecati labore. Id praesentium porro ea placeat rerum aut tempore totam aut illum
-                  cupiditate sed laborum explicabo. Hic explicabo voluptatibus qui repellat fugiat ex voluptatum fuga
-                  qui architecto atque quo illum quas aut facilis nesciunt? Ut suscipit rerum ut perferendis nihil ea
-                  autem unde est enim veniam nam odio tempora.
-                </p>
-                <p>
-                  Quo numquam iste est repellendus numquam et galisum omnis ad praesentium dolores aut neque saepe vel
-                  consectetur enim aut cumque neque. Et voluptate sapiente quisquam quasi eum beatae voluptas rem iure
-                  velit. Sed impedit eaque 33 natus nihil est quaerat porro est quia nisi qui doloribus aperiam. Sit
-                  culpa illum ea consectetur perspiciatis ex veritatis dolorem id velit sequi qui maiores asperiores!
-                </p>
-              </div>
-            }
-          />
-          <NavItem
-            icon={['fal', 'cog']}
-            subItems={[
-              {
-                label: 'Label 1',
-              },
-              {
-                label: 'Label 2',
-              },
-            ]}
-          />
-          <NavItem
-            icon={['fal', 'user-circle']}
-            subItems={[
-              {
-                label: 'Label 1',
-              },
-              {
-                label: 'Label 2',
-              },
-            ]}
-          />
-        </NavBarUtilities>
-      </NavBar>
-    </Router>
-  );
-};
-
-<Meta
-  title='Organism'
-  component={NavBar}
-  parameters={{
-    viewMode: 'docs',
-    layout: 'fullscreen',
-  }}
-/>
-
-# NavBar
-
-NavBar provides access to destinations and is permanently on-screen.
-
-It can contain:
-
-- Five to seven main destinations (navButtons)
-- Five max transversale destinations (navIcons)
-
-Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s312)
-
-## Brand
-
-<Canvas isExpanded={true}>
-  <Router>
-    <NavBar logoSource='./images/logo.svg' redirection='/' className={styles.positionRelative} />
-  </Router>
-</Canvas>
-
-## Navigation buttons
-
-<Canvas isExpanded={false}>
-  <Router>
-    <NavBar logoSource='./images/logo.svg' redirection='/' className={styles.positionRelative}>
+    <NavBar {...args} className={styles.positionRelative}>
       <NavBarMenu>
         <NavItem
           label='Label 1'
@@ -212,15 +52,6 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
           }}
         />
       </NavBarMenu>
-    </NavBar>
-  </Router>
-</Canvas>
-
-## NavIcons
-
-<Canvas isExpanded={false}>
-  <Router>
-    <NavBar logoSource='./images/logo.svg' className={styles.positionRelative}>
       <NavBarUtilities>
         <NavItem
           icon={['fal', 'ballot-check']}
@@ -245,7 +76,7 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
                 padding: '0px 16px',
                 overflowX: 'hidden',
                 overflowY: 'auto',
-                backgroundColor: '#FFF',
+                backgroundColor: '#black',
               }}>
               <p>
                 Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
@@ -300,7 +131,167 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
         />
       </NavBarUtilities>
     </NavBar>
-  </Router>
+  );
+};
+
+<Meta
+  title='Organism'
+  component={NavBar}
+  parameters={{
+    viewMode: 'docs',
+    layout: 'fullscreen',
+  }}
+/>
+
+# NavBar
+
+NavBar provides access to destinations and is permanently on-screen.
+
+It can contain:
+
+- Five to seven main destinations (navButtons)
+- Five max transversale destinations (navIcons)
+
+Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s312)
+
+## Brand
+
+<Canvas isExpanded={true}>
+  <NavBar logoSource='./images/logo.svg' redirection='/' className={styles.positionRelative} />
+</Canvas>
+
+## Navigation buttons
+
+<Canvas isExpanded={false}>
+  <NavBar logoSource='./images/logo.svg' redirection='/' className={styles.positionRelative}>
+    <NavBarMenu>
+      <NavItem
+        label='Label 1'
+        subItems={[
+          {
+            label: 'Label 1',
+            onClick: () => {
+              console.log('label 1 - label 1');
+            },
+          },
+          {
+            label: 'Label 2',
+            onClick: () => {
+              console.log('label 1 - label 2');
+            },
+          },
+        ]}
+      />
+      <NavItem
+        label='Label 2'
+        subItems={[
+          {
+            label: 'Label 1',
+            onClick: () => {
+              console.log('label 2 - label 1');
+            },
+          },
+          {
+            label: 'Label 2',
+            onClick: () => {
+              console.log('label 2 - label 2');
+            },
+          },
+        ]}
+      />
+      <NavItem
+        label='Label 3'
+        onClick={() => {
+          console.log('label 3');
+        }}
+      />
+    </NavBarMenu>
+  </NavBar>
+</Canvas>
+
+## NavIcons
+
+<Canvas isExpanded={false}>
+  <NavBar logoSource='./images/logo.svg' className={styles.positionRelative}>
+    <NavBarUtilities>
+      <NavItem
+        icon={['fal', 'ballot-check']}
+        counter={2}
+        subItems={[
+          {
+            label: 'Label 1',
+          },
+          {
+            label: 'Label 2',
+          },
+        ]}
+      />
+      <NavItem
+        icon={['fal', 'bell']}
+        counter='+99'
+        customSubItem={
+          <div
+            style={{
+              maxWidth: '500px',
+              height: '300px',
+              padding: '0px 16px',
+              overflowX: 'hidden',
+              overflowY: 'auto',
+              backgroundColor: 'black',
+            }}>
+            <p>
+              Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
+              rerum nihil obcaecati labore. Id praesentium porro ea placeat rerum aut tempore totam aut illum cupiditate
+              sed laborum explicabo. Hic explicabo voluptatibus qui repellat fugiat ex voluptatum fuga qui architecto
+              atque quo illum quas aut facilis nesciunt? Ut suscipit rerum ut perferendis nihil ea autem unde est enim
+              veniam nam odio tempora.
+            </p>
+            <p>
+              Quo numquam iste est repellendus numquam et galisum omnis ad praesentium dolores aut neque saepe vel
+              consectetur enim aut cumque neque. Et voluptate sapiente quisquam quasi eum beatae voluptas rem iure
+              velit. Sed impedit eaque 33 natus nihil est quaerat porro est quia nisi qui doloribus aperiam. Sit culpa
+              illum ea consectetur perspiciatis ex veritatis dolorem id velit sequi qui maiores asperiores!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
+              rerum nihil obcaecati labore. Id praesentium porro ea placeat rerum aut tempore totam aut illum cupiditate
+              sed laborum explicabo. Hic explicabo voluptatibus qui repellat fugiat ex voluptatum fuga qui architecto
+              atque quo illum quas aut facilis nesciunt? Ut suscipit rerum ut perferendis nihil ea autem unde est enim
+              veniam nam odio tempora.
+            </p>
+            <p>
+              Quo numquam iste est repellendus numquam et galisum omnis ad praesentium dolores aut neque saepe vel
+              consectetur enim aut cumque neque. Et voluptate sapiente quisquam quasi eum beatae voluptas rem iure
+              velit. Sed impedit eaque 33 natus nihil est quaerat porro est quia nisi qui doloribus aperiam. Sit culpa
+              illum ea consectetur perspiciatis ex veritatis dolorem id velit sequi qui maiores asperiores!
+            </p>
+          </div>
+        }
+      />
+      <NavItem
+        icon={['fal', 'cog']}
+        subItems={[
+          {
+            label: 'Label 1',
+          },
+          {
+            label: 'Label 2',
+          },
+        ]}
+      />
+      <NavItem
+        icon={['fal', 'user-circle']}
+        subItems={[
+          {
+            label: 'Label 1',
+          },
+          {
+            label: 'Label 2',
+          },
+        ]}
+      />
+    </NavBarUtilities>
+  </NavBar>
 </Canvas>
 
 ## Props
