--- a/src/Components/Organisms/Filter/Filter.stories.mdx
+++ b/src/Components/Organisms/Filter/Filter.stories.mdx
@@ -286,7 +286,7 @@ Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6u
 
 ## Props
 
-<ArgsTable of={Filter} sort='requiredFirst' />
+<ArgsTable of={Filter} sort='requiredFirst' exclude={['dataTestId']} />
 
 For layout management, please refer to this [example](https://codesandbox.io/s/size-management-sidebar-xtpkk0)
 
