Doc: Prepare changelog for version 2.0.0 Doc: Update readme with new links Doc: Add Support for migration and deprecation in storybook Doc: Add deprecation hints for ColumnType.CUSTOM, ColumnType.TABLE, FieldLegacyTypeEnum.CUSTOM, FieldLegacyTypeEnum.LINE_EDITABLE_TABLE, FieldLegacyTypeEnum.EDITABLE_TABLE Doc: Remove examples from documentation that will be deprecated soon FieldLegacyTypeEnum.CUSTOM, FieldLegacyTypeEnum.LINE_EDITABLE_TABLE, FieldLegacyTypeEnum.EDITABLE_TABLE
Fix: Atoms/DatePickerInput remove null as option, prefer undefined
Fix: Atoms/YearPickerInput remove null as option, prefer undefined
Fix: Atoms/Theme simplify theme by removing the ThemeContext

Feat: Organisms/DataTable migrate scss to module.scss

--- a/src/Components/Organisms/DataTable/Columns.stories.mdx
+++ b/src/Components/Organisms/DataTable/Columns.stories.mdx
@@ -55,7 +55,7 @@ import {
 
 <ArgsTable of={FakeColumnCode} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnCustom<T\>
+## IColumnCustom<T\> (deprecated, will be removed in version 2.1)
 
 <ArgsTable of={FakeColumnCustom} sort='requiredFirst' exclude={['dataTestId']} />
 
@@ -99,7 +99,7 @@ import {
 
 <ArgsTable of={FakeColumnSwitch} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnTable<T, U\>
+## IColumnTable<T, U\> (deprecated, will be removed in version 2.1)
 
 <ArgsTable of={FakeColumnTable} sort='requiredFirst' exclude={['dataTestId']} />
 
