Build: bump react-collapsed to 4.0.2 Build: bump suneditor to 2.44.8 Build: bump @rollup/plugin-node-resolve to 15.0.2 Build: bump @rollup/plugin-terser to 0.4.1 Build: bump @rollup/plugin-typescript to 11.1.0 Build: bump eslint to 8.38.0 Build: bump sass to 1.61.0 Build: bump typescript to >5 Build: bump webpack to 5.78.0 Doc: bump storybook to 7.0.2
Test: replace suneditor local mocks by global mock

--- a/src/Components/Organisms/DataTable/Columns.stories.mdx
+++ b/src/Components/Organisms/DataTable/Columns.stories.mdx
@@ -35,82 +35,82 @@ import {
 
 # Columns
 
-## IColumnAmount<T\>
+## IColumnAmount\<T\>
 
 <ArgsTable of={FakeColumnAmount} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnBadge<T\>
+## IColumnBadge\<T\>
 
 <ArgsTable of={FakeColumnBadge} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnButton<T\>
+## IColumnButton\<T\>
 
 <ArgsTable of={FakeColumnButton} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnCheckbox<T\>
+## IColumnCheckbox\<T\>
 
 <ArgsTable of={FakeColumnCheckbox} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnCode<T\>
+## IColumnCode\<T\>
 
 <ArgsTable of={FakeColumnCode} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnCustom<T\> (deprecated, will be removed in version 2.1)
+## IColumnCustom\<T\> (deprecated, will be removed in version 2.1)
 
 <ArgsTable of={FakeColumnCustom} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnDate<T\>
+## IColumnDate\<T\>
 
 <ArgsTable of={FakeColumnDate} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnDescription<T\>
+## IColumnDescription\<T\>
 
 <ArgsTable of={FakeColumnDescription} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnDynamicSearch<T\>
+## IColumnDynamicSearch\<T\>
 
 <ArgsTable of={FakeColumnDynamicSearch} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnFile<T\>
+## IColumnFile\<T\>
 
 <ArgsTable of={FakeColumnFile} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnMultiSelect<T\>
+## IColumnMultiSelect\<T\>
 
 <ArgsTable of={FakeColumnMultiSelect} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnNumber<T\>
+## IColumnNumber\<T\>
 
 <ArgsTable of={FakeColumnNumber} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnPercentage<T\>
+## IColumnPercentage\<T\>
 
 <ArgsTable of={FakeColumnPercentage} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnRichText<T\>
+## IColumnRichText\<T\>
 
 <ArgsTable of={FakeColumnRichText} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnSection<T\>
+## IColumnSection\<T\>
 
 <ArgsTable of={FakeColumnSection} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnSwitch<T\>
+## IColumnSwitch\<T\>
 
 <ArgsTable of={FakeColumnSwitch} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnTable<T, U\> (deprecated, will be removed in version 2.1)
+## IColumnTable\<T, U\> (deprecated, will be removed in version 2.1)
 
 <ArgsTable of={FakeColumnTable} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnText<T\>
+## IColumnText\<T\>
 
 <ArgsTable of={FakeColumnText} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnTextArea<T\>
+## IColumnTextArea\<T\>
 
 <ArgsTable of={FakeColumnTextArea} sort='requiredFirst' exclude={['dataTestId']} />
 
-## IColumnYear<T\>
+## IColumnYear\<T\>
 
 <ArgsTable of={FakeColumnYear} sort='requiredFirst' exclude={['dataTestId']} />
