--- a/src/Components/Organisms/DataTable/DataTable.stories.mdx
+++ b/src/Components/Organisms/DataTable/DataTable.stories.mdx
@@ -587,7 +587,7 @@ Especially usefull when having to display 2 tables side by side.
 
 <ArgsTable of={StaticDataTable} sort='requiredFirst' />
 
-## extra: IExtraStaticDataTableProps<T\>
+## extra: IExtraStaticDataTableProps\<T\>
 
 <ArgsTable of={FakeExtraStaticDataTable} sort='requiredFirst' />
 
