--- a/src/Components/Organisms/DataTable/LineEditableDataTable/LineEditableDataTable.stories.mdx
+++ b/src/Components/Organisms/DataTable/LineEditableDataTable/LineEditableDataTable.stories.mdx
@@ -379,7 +379,7 @@ Reminder, you might `onRowEdit`, `onRowSubmit`, `onRowCancelEdit` to capture the
 
 <ArgsTable of={LineEditableDataTable} sort='requiredFirst' exclude={['dataTestId']} />
 
-## extra: IExtraLineEditableDataTableProps<T\>
+## extra: IExtraLineEditableDataTableProps\<T\>
 
 <ArgsTable of={FakeExtraLineEditableDataTable} sort='requiredFirst' />
 
