--- a/src/Components/Organisms/DataTable/LineEditableInPlaceDataTable/LineEditableInPlaceDataTable.stories.mdx
+++ b/src/Components/Organisms/DataTable/LineEditableInPlaceDataTable/LineEditableInPlaceDataTable.stories.mdx
@@ -199,7 +199,7 @@ Using `canAddNewLine` and `onNewLine` you can enable new row creation and manage
 
 <ArgsTable of={LineEditableInPlaceDataTable} sort='requiredFirst' exclude={['dataTestId']} />
 
-## extra: IExtraLineEditableInPlaceDataTableProps<T\>
+## extra: IExtraLineEditableInPlaceDataTableProps\<T\>
 
 <ArgsTable of={FakeExtraLineEditableInPlaceDataTable} sort='requiredFirst' />
 
