--- a/src/Components/Organisms/DataTable/StaticDataTable/StaticDataTable.stories.mdx
+++ b/src/Components/Organisms/DataTable/StaticDataTable/StaticDataTable.stories.mdx
@@ -28,7 +28,7 @@ Play with StaticDataTable live on [CodeSandbox](https://codesandbox.io/s/datatab
 
 <ArgsTable of={StaticDataTable} sort='requiredFirst' exclude={['dataTestId']} />
 
-## extra: IExtraStaticDataTableProps<T\>
+## extra: IExtraStaticDataTableProps\<T\>
 
 <ArgsTable of={FakeExtraStaticDataTable} sort='requiredFirst' />
 
