--- a/src/Components/Atoms/Icon/Icon.stories.mdx
+++ b/src/Components/Atoms/Icon/Icon.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, IconGallery, IconItem } from '@storybook/addon-docs/';
+import { Meta, IconGallery, IconItem } from '@storybook/addon-docs';
 import { library } from '@fortawesome/fontawesome-svg-core';
 
 import Icon from './Icon';
