--- a/src/Components/Organisms/DataTable/EditableDataTable/EditableDataTable.stories.mdx
+++ b/src/Components/Organisms/DataTable/EditableDataTable/EditableDataTable.stories.mdx
@@ -188,7 +188,7 @@ Using `canAddNewLine` and `onNewLine` you can enable new row creation and manage
 
 <ArgsTable of={EditableDataTable} sort='requiredFirst' exclude={['dataTestId']} />
 
-## extra: IExtraEditableDataTableProps<T\>
+## extra: IExtraEditableDataTableProps\<T\>
 
 <ArgsTable of={FakeExtraEditableDataTable} sort='requiredFirst' />
 
